feat: update pedagogie-service for new commun version